Differential Expression Analysis

--- a/1.2 TCGA Data Processing.ipynb
+++ b/1.2 TCGA Data Processing.ipynb
@@ -14,12 +14,12 @@
     "\n",
     "The difficulty comes in dealing with cross mapped miRNAs... There is no easy way to determine which other miRNA cross mapped miRNAs map to. I decided to just go with what the original <a  href=\"https://academic.oup.com/nar/article/44/1/e3/2499678\">paper</a>/data analysis did, which is count the read for both miRNAs.\n",
     "\n",
-    "The summary file columns are the case id followed by the sample type. This sample type is a two digit code which 01-09 for tumors, 10-19 for normal and 20-29 for control (according to the outdated documentation <a href=\"https://wiki.nci.nih.gov/display/TCGA/TCGA+barcode\">here</a>). A full list of codes is <a href=\"https://gdc.cancer.gov/resources-tcga-users/tcga-code-tables/sample-type-codes\">here</a>."
+    "The summary file columns are the case id followed by the sample type. This sample type is a two digit code which 01-09 for tumors, 10-19 for normal and 20-29 for control. A full list of codes is <a href=\"https://gdc.cancer.gov/resources-tcga-users/tcga-code-tables/sample-type-codes\">here</a>."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,21 +94,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "def tcga_mirna_summary(tcga_dir):\n",
+    "def tcga_mirna_summary(tcga_dir, out_mir_dir):\n",
     "    for in_dir in os.listdir(tcga_dir):\n",
     "        print \"Processing {}\".format(in_dir)\n",
     "        mir_dir = \"{}/{}/miRNA-seq/Isoform Expression Quantification\".format(tcga_dir, in_dir)\n",
     "        # find json metadata file\n",
     "        meta_file = [meta for meta in os.listdir(mir_dir) if \"json\" in meta][0]\n",
     "        collect_miRNA(mir_dir, meta_file, \n",
-    "                      \"TCGA Summary/miRNA-seq/{} miRNA-seq Raw Reads.csv\".format(in_dir),\n",
-    "                      \"TCGA Summary/miRNA-seq/{} miRNA-seq RPM Reads.csv\".format(in_dir))"
+    "                      \"{}/{} miRNA-seq Raw Reads.csv\".format(out_mir_dir, in_dir),\n",
+    "                      \"{}/{} miRNA-seq RPM Reads.csv\".format(out_mir_dir, in_dir))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing CESC\n",
+      "Processing UCEC\n",
+      "Processing OV\n",
+      "Processing THCA\n",
+      "Processing STAD\n",
+      "Processing CHOL\n",
+      "Processing UCS\n",
+      "Processing DLBC\n",
+      "Processing UVM\n",
+      "Processing MESO\n",
+      "Processing ACC\n",
+      "Processing KICH\n",
+      "Processing THYM\n",
+      "Processing TGCT\n",
+      "Processing READ\n",
+      "Processing BRCA\n",
+      "Processing GBM\n",
+      "Processing LUAD\n",
+      "Processing KIRC\n",
+      "Processing HNSC\n",
+      "Processing LGG\n",
+      "Processing LUSC\n",
+      "Processing PRAD\n",
+      "Processing SKCM\n",
+      "Processing COAD\n",
+      "Processing BLCA\n",
+      "Processing LIHC\n",
+      "Processing KIRP\n",
+      "Processing SARC\n",
+      "Processing LAML\n",
+      "Processing ESCA\n",
+      "Processing PAAD\n",
+      "Processing PCPG\n"
+     ]
+    }
+   ],
+   "source": [
+    "tcga_mirna_summary(\"F:\\TCGA\", \"TCGA Summary\")"
    ]
   },
   {
